[package]
name = "candle-cublaslt"
version = "0.2.2"
edition = "2021"

description = "CUBLASLt gemm for the candle ML framework."

[dependencies]
candle = { version = "*", package = "candle-core", features = ["cuda"]}
cudarc = { version = "0.11.6", default-features = false, features = [ "cublaslt", "f16" ]}
half = { version = "2.3.1", features = ["num-traits"] }

[features]
default = []
